--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ body{
   border-bottom: 1px solid #fff;
 }
 .english__text span{
-  font-size: 2remfeat:;
+  font-size: 2rem;
 }
 .footer__inner{
   display: flex;
